--- a/static/css/furniture.css
+++ b/static/css/furniture.css
@@ -18,24 +18,169 @@
   transform: scale3d(var(--SCALE), var(--SCALE), var(--SCALE)) translate(50%, 50%) scale3d(1.3, 1.3, 1.3) rotate(45deg) translate(-50%, -50%); }
 
 .boothset {
-  width: calc(80px * var(--SCALE));
-  height: calc(var(--SCALE) * 2.5* .4 *80px); }
-  .boothset > *:nth-child(2) {
-    transform-origin: 0 0;
+  /* Round Rectangle Table */ }
+  .boothset .r-rectangle {
+    --RES: 3.81421vw;
+    --SCALE: 1;
+    --W: calc(0.19773 * var(--RES));
+    --L: calc(1 * var(--RES));
+    --H: calc(0.19773 * var(--RES));
+    --T_bW: calc(0.19773 * var(--RES));
+    --T_t: calc(0.01977 * var(--RES));
+    --B_t: calc(0.01977 * var(--RES));
+    --B_d: calc(0.19773 * var(--RES));
+    --L_d: calc(0.01977 * var(--RES)); }
+  .boothset .r-rectangle-B {
+    /* shared box dimensions */
+    /* dimensions passed to each box through CSS inheritance */
+    --w: calc(0.09886 * var(--RES));
+    --l: calc(0 * var(--RES));
+    --h: calc(0.07706 * var(--RES));
+    --bW: calc(0.04449 * var(--RES));
+    --bL1: calc(0.01977 * var(--RES));
+    --bL2: calc(0 * var(--RES));
+    --sign: 1;
+    --theta: 0.5236rad;
+    --phi1: -0.25118rad;
+    --phi2: 0rad;
+    --hyp: calc(0.08898 * var(--RES));
+    --hyp1: calc(0.07955 * var(--RES));
+    --hyp2: calc(0.07706 * var(--RES));
+    --w1: calc(0.00989 * var(--RES));
+    --l1: calc(0.01977 * var(--RES));
+    /* global positioning */
     transform-style: preserve-3d;
-    transform: rotate(180deg) translate(-100%, -650%); }
+    width: calc(0.19773 * var(--RES));
+    height: calc(0.19773 * var(--RES));
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* positioning each box */
+    /* implement border-type() mixin */ }
+    .boothset .r-rectangle-B > *:nth-child(1) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(0deg) rotateX(90deg) translateZ(calc(-0.08562 * var(--RES))); }
+    .boothset .r-rectangle-B > *:nth-child(2) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(60deg) rotateX(90deg) translateZ(calc(-0.08562 * var(--RES))); }
+    .boothset .r-rectangle-B > *:nth-child(3) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(120deg) rotateX(90deg) translateZ(calc(-0.08562 * var(--RES))); }
+    .boothset .r-rectangle-B > *:nth-child(4) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(180deg) rotateX(90deg) translateZ(calc(-0.08562 * var(--RES))); }
+    .boothset .r-rectangle-B > *:nth-child(5) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(240deg) rotateX(90deg) translateZ(calc(-0.08562 * var(--RES))); }
+    .boothset .r-rectangle-B > *:nth-child(6) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(300deg) rotateX(90deg) translateZ(calc(-0.08562 * var(--RES))); }
+    .boothset .r-rectangle-B .w-s2, .boothset .r-rectangle-B .w-s4 {
+      border-bottom: none;
+      --width: calc(var(--bL2) + var(--l) + var(--bL1));
+      --offset: var(--bL2); }
+    .boothset .r-rectangle-B .w-s2, .boothset .r-rectangle-B .w-s4 {
+      overflow: hidden; }
+  .boothset .r-rectangle-L {
+    /* shared box dimensions */
+    /* dimensions passed to each box through CSS inheritance */
+    --w: calc(0.01977 * var(--RES));
+    --l: calc(0.00856 * var(--RES));
+    --h: calc(0.17795 * var(--RES));
+    --bW: calc(0.00494 * var(--RES));
+    --hyp: calc(0.00989 * var(--RES));
+    --theta: 0.5236rad;
+    /* global positioning */
+    transform-style: preserve-3d;
+    width: calc(0.01977 * var(--RES));
+    height: calc(0.01977 * var(--RES));
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* positioning each box */ }
+    .boothset .r-rectangle-L > *:nth-child(1) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, 0) rotate(180deg); }
+    .boothset .r-rectangle-L > *:nth-child(2) {
+      position: absolute;
+      left: 50%;
+      top: 0;
+      transform: translate(-50%, 0); }
+    .boothset .r-rectangle-L .t-face {
+      overflow: hidden !important; }
+  .boothset .r-rectangle-T {
+    /* shared box dimensions */
+    /* shared dimensions passed to each box through CSS inheritance */
+    --h: calc(0.01977 * var(--RES));
+    /* global positioning */
+    transform-style: preserve-3d;
+    width: calc(0.19773 * var(--RES));
+    height: calc(1 * var(--RES));
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, calc(0.17795 * var(--RES)));
+    /* positioning each box */ }
+    .boothset .r-rectangle-T > *:nth-child(1) {
+      --w: calc(1 * var(--RES));
+      --l: calc(0.19773 * var(--RES));
+      --bW: calc(0.19773 * var(--RES));
+      --hyp: calc(0.27963 * var(--RES));
+      --theta: 0.7854rad;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transform: translate(-50%, -50%) rotate(-90deg) translate(calc(-0.5 * var(--RES)), calc(0.09886 * var(--RES))); }
+    .boothset .r-rectangle-T > *:nth-child(2) {
+      --w: calc(-0.19773 * var(--RES));
+      --l: calc(1 * var(--RES));
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      --hello: world; }
+    .boothset .r-rectangle-T > *:nth-child(3) {
+      --w: calc(1 * var(--RES));
+      --l: calc(0.19773 * var(--RES));
+      --bW: calc(0.19773 * var(--RES));
+      --hyp: calc(0.27963 * var(--RES));
+      --theta: 0.7854rad;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transform: translate(-50%, -50%) rotate(90deg) translate(calc(0.5 * var(--RES)), calc(-0.09886 * var(--RES))); }
+    .boothset .r-rectangle-T .t-face {
+      overflow: hidden !important; }
 
 /* Booth */
 .booth {
-  --RES: 80px;
-  --SCALE: 3;
+  --RES: 3.81421vw;
+  --SCALE: 1;
   --W: calc(1 * var(--RES));
-  --L: calc(0.4 * var(--RES));
+  --L: calc(0.2 * var(--RES));
   --H: calc(0.3 * var(--RES)); }
 .booth-B1 {
   --w: calc(1 * var(--RES));
   --l: calc(0.05 * var(--RES));
-  --h: calc(0.4 * var(--RES));
+  --h: calc(0.2 * var(--RES));
   --bW: calc(0.05 * var(--RES));
   --hyp: calc(0.07071 * var(--RES));
   --theta: 0.7854rad;
@@ -45,8 +190,8 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform-origin: 50% 50% calc(0.2 * var(--RES));
-  transform: translate3d(-50%, -50%, calc(0.075 * var(--RES))) rotateX(-90deg) rotate(180deg); }
+  transform-origin: 50% 50% calc(0.1 * var(--RES));
+  transform: translate3d(-50%, -50%, calc(0.175 * var(--RES))) rotateX(-90deg) rotate(180deg); }
   .booth-B1 .t-face {
     overflow: hidden !important; }
 .booth-C {
@@ -55,10 +200,10 @@
   /* global positioning */
   transform-style: preserve-3d;
   width: calc(1 * var(--RES));
-  height: calc(0.366 * var(--RES));
+  height: calc(0.191 * var(--RES));
   position: absolute;
   left: 50%;
-  top: calc(0.05 * var(--RES));
+  top: calc(0.025 * var(--RES));
   transform: translate3d(-50%, 0, calc(0.3 * var(--RES)));
   /* positioning each box */ }
   .booth-C > *:nth-child(1) {
@@ -80,14 +225,14 @@
     position: absolute;
     left: 50%;
     top: 0;
-    transform: translate(-50%, 0) translate3d(0, calc(0.261 * var(--RES)), calc(0.025 * var(--RES))) rotateX(-90deg) rotate(180deg); }
+    transform: translate(-50%, 0) translate3d(0, calc(0.086 * var(--RES)), calc(0.025 * var(--RES))) rotateX(-90deg) rotate(180deg); }
     .booth-C > *:nth-child(1) .w-s2, .booth-C > *:nth-child(1) .w-s4 {
       border-top: none;
       --width: calc(var(--bL2) + var(--l1) + var(--bL1));
       --offset: 0px; }
   .booth-C > *:nth-child(2) {
     --w: calc(1 * var(--RES));
-    --l: calc(0.146 * var(--RES));
+    --l: calc(-0.029 * var(--RES));
     --h: calc(0.05 * var(--RES));
     position: absolute;
     left: 50%;
@@ -111,32 +256,32 @@
   /* global positioning */
   transform-style: preserve-3d;
   width: calc(1 * var(--RES));
-  height: calc(0.05 * var(--RES));
+  height: calc(0.025 * var(--RES));
   position: absolute;
   left: 50%;
   top: 0;
-  transform: translate3d(-50%, 0, calc(0.3 * var(--RES))) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, -0.26795, 1, 0, 0, 0, 0, 1);
+  transform: translate3d(-50%, 0, calc(0.3 * var(--RES))) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, -0.08749, 1, 0, 0, 0, 0, 1);
   /* positioning each box */ }
   .booth-B2 > *:nth-child(1) {
     --w: calc(1 * var(--RES));
     --l: calc(0.24 * var(--RES));
-    --h: calc(0.05 * var(--RES));
+    --h: calc(0.025 * var(--RES));
     --bW: calc(0 * var(--RES));
     --hyp: calc(0.24 * var(--RES));
     --theta: 0deg;
     position: absolute;
-    transform-origin: 50% 50% calc(0.025 * var(--RES));
-    transform: translate3d(-50%, -50%, calc(-0.025 * var(--RES))) rotateX(-90deg) rotate(180deg) translate3d(calc(-0.5 * var(--RES)), calc(0.12 * var(--RES)), calc(0.025 * var(--RES))); }
+    transform-origin: 50% 50% calc(0.0125 * var(--RES));
+    transform: translate3d(-50%, -50%, calc(-0.0125 * var(--RES))) rotateX(-90deg) rotate(180deg) translate3d(calc(-0.5 * var(--RES)), calc(0.12 * var(--RES)), calc(0.0125 * var(--RES))); }
   .booth-B2 > *:nth-child(2) {
     --w: calc(1 * var(--RES));
-    --l: calc(0.56 * var(--RES));
-    --h: calc(0.05 * var(--RES));
+    --l: calc(0.26 * var(--RES));
+    --h: calc(0.025 * var(--RES));
     --bW: calc(0 * var(--RES));
-    --hyp: calc(0.56 * var(--RES));
+    --hyp: calc(0.26 * var(--RES));
     --theta: 0rad;
     position: absolute;
-    transform-origin: 50% 50% calc(0.025 * var(--RES));
-    transform: translate3d(-50%, -50%, calc(-0.025 * var(--RES))) rotateX(-90deg) translate3d(calc(0.5 * var(--RES)), calc(-0.52 * var(--RES)), calc(0.025 * var(--RES))); }
+    transform-origin: 50% 50% calc(0.0125 * var(--RES));
+    transform: translate3d(-50%, -50%, calc(-0.0125 * var(--RES))) rotateX(-90deg) translate3d(calc(0.5 * var(--RES)), calc(-0.37 * var(--RES)), calc(0.0125 * var(--RES))); }
   .booth-B2 .t-face {
     overflow: hidden !important; }
 
