--- a/static/css/demostyles.css
+++ b/static/css/demostyles.css
@@ -145,7 +145,7 @@ footer {}
 
 	/* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #7b5eff;
     color: white;
     padding: 16px;
     font-size: 16px;
