--- a/static/css/demostyles.css
+++ b/static/css/demostyles.css
@@ -187,5 +187,5 @@ footer {}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #7b5eff;
 }
