--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -1,125 +1,125 @@
-					<html>
-					<head>
-						<meta charset="UTF-8">
-						<meta http-equiv="Content-Type" content="application/xhtml+xml">
-						<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-						<title>FAC Map</title>
-						<!-- Styles -->
-						<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
-						<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/furniture.css') }}" async>
-						<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/fac_placement.css') }}" async>
-						<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
-						<svg style="height:0;">
-							<defs>
-								<rect id="vert_box" x="1" y="-.1" width="98" height="100.2" rx="24.5" ry="24.5"/>
-								<rect id="hor_box" x="-.1" y="1" width="100.2" height="98" rx="24.5" ry="24.5"/>
-								<mask id="border_mask">
-									<rect width="100" height="100" fill="white"/>
-									<use href="#vert_box"/>
-									<use href="#hor_box"/>
-								</mask>
-								<clipPath id="border_clip">
-									<use href="#vert_box"/>
-									<use href="#hor_box"/>
-								</clipPath>
-							</defs>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="application/xhtml+xml">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title>FAC Map</title>
+	<!-- Styles -->
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/furniture.css') }}" async>
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/fac_placement.css') }}" async>
+	<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
+	<svg style="height:0;">
+		<defs>
+			<rect id="vert_box" x="1" y="-.1" width="98" height="100.2" rx="24.5" ry="24.5"/>
+			<rect id="hor_box" x="-.1" y="1" width="100.2" height="98" rx="24.5" ry="24.5"/>
+			<mask id="border_mask">
+				<rect width="100" height="100" fill="white"/>
+				<use href="#vert_box"/>
+				<use href="#hor_box"/>
+			</mask>
+			<clipPath id="border_clip">
+				<use href="#vert_box"/>
+				<use href="#hor_box"/>
+			</clipPath>
+		</defs>
 
-							<rect id="cb" width="100" height="100" rx="25" ry="25" mask="url(#border_mask)"/>
+		<rect id="cb" width="100" height="100" rx="25" ry="25" mask="url(#border_mask)"/>
 
-							<symbol id="g" viewbox="-50 -50 100 100" fill="none">
-								<g id="hor">
-									<path d="M-150,0 C-150,-65 150,-65 150,0" />
-									<path d="M-150,0 C-150,-55 150,-55 150,0" />
-									<path d="M-150,0 C-150,-45 150,-45 150,0" />
-									<path d="M-150,0 C-150,-35 150,-35 150,0" />
-									<path d="M-150,0 C-150,-25 150,-25 150,0" />
-									<path d="M-150,0 C-150,-15 150,-15 150,0" />
-									<path d="M-150,0 C-150,-5 150,-5 150,0" />
-									<path d="M-150,0 C-150,5 150,5 150,0" />
-									<path d="M-150,0 C-150,15 150,15 150,0" />
-									<path d="M-150,0 C-150,25 150,25 150,0" />
-									<path d="M-150,0 C-150,35 150,35 150,0" />
-									<path d="M-150,0 C-150,45 150,45 150,0" />
-									<path d="M-150,0 C-150,55 150,55 150,0" />
-									<path d="M-150,0 C-150,65 150,65 150,0" />
-								</g>
-								<g id="vert">
-									<path d="M0,-150 C-65,-150 -65,150 0,150" />
-									<path d="M0,-150 C-55,-150 -55,150 0,150" />
-									<path d="M0,-150 C-45,-150 -45,150 0,150" />
-									<path d="M0,-150 C-35,-150 -35,150 0,150" />
-									<path d="M0,-150 C-25,-150 -25,150 0,150" />
-									<path d="M0,-150 C-15,-150 -15,150 0,150" />
-									<path d="M0,-150 C-5,-150 -5,150 0,150" />
-									<path d="M0,-150 C5,-150 5,150 0,150" />
-									<path d="M0,-150 C15,-150 15,150 0,150" />
-									<path d="M0,-150 C25,-150 25,150 0,150" />
-									<path d="M0,-150 C35,-150 35,150 0,150" />
-									<path d="M0,-150 C45,-150 45,150 0,150" />
-									<path d="M0,-150 C55,-150 55,150 0,150" />
-									<path d="M0,-150 C65,-150 65,150 0,150" />
-								</g>
-							</symbol>
-						</svg>
-						<style> 
-							{% for i in range(length)%}
-							#dot{{i}} {
-								position:absolute;
-								box-sizing: content-box;
-								transform-origin:0 0;
-								top: 0px;
-								left: 0px;
-								width: 150%;
-								z-index: 2;   
-							}
-							{%endfor%}
-
-							#newcontainer
-							overflow: auto;   
-						}
-					</style>
-					<script>
-						
-						function dotPositions(){
-							var map = document.getElementById("map");
-							var currentScreenX = map.offsetWidth - 100.0;
-							var currentScreenY = map.offsetHeight - 100.0;
-							var i;
-							var l = {{length}};
-							for(i = 0; i < l; i++){
-								var s = document.getElementById("dot" + i);
-								console.log(s);
-
-								var scale = currentScreenX/2000;
-
-
-								var screenXArr = {{screen_xs}};
-								var screenYArr = {{screen_ys}};
-								var preXArr = {{x_coord}};
-								var preYArr = {{y_coord}};
-								var screenX = screenXArr[i] - 100.0;
-								var screenY = screenYArr[i] - 100.0;
-
-								var prevScale = screenX/2000;
-
-								var preX = preXArr[i] - 50.0;
-								var preY = preYArr[i] - 50.0;
-
-								var x = ((currentScreenX*preX)/screenX) + 50.0;
-								var y = ((currentScreenY*preY)/screenY) + 50.0;
-
-			//var yScale = currentScreenX/1000;
-
-			//s.style.transform = 'scale('+scale+','+scale+')';
-			s.style.width = 30 + "px";
-			s.style.height = 30 + "px";
-			s.style.transform = 'translate('+x+'px,'+y+'px)';
-			//s.style.left = x + "px";
-			//s.style.top = y + "px";
-			console.log("dotPositions() ran!");
+		<symbol id="g" viewbox="-50 -50 100 100" fill="none">
+			<g id="hor">
+				<path d="M-150,0 C-150,-65 150,-65 150,0" />
+				<path d="M-150,0 C-150,-55 150,-55 150,0" />
+				<path d="M-150,0 C-150,-45 150,-45 150,0" />
+				<path d="M-150,0 C-150,-35 150,-35 150,0" />
+				<path d="M-150,0 C-150,-25 150,-25 150,0" />
+				<path d="M-150,0 C-150,-15 150,-15 150,0" />
+				<path d="M-150,0 C-150,-5 150,-5 150,0" />
+				<path d="M-150,0 C-150,5 150,5 150,0" />
+				<path d="M-150,0 C-150,15 150,15 150,0" />
+				<path d="M-150,0 C-150,25 150,25 150,0" />
+				<path d="M-150,0 C-150,35 150,35 150,0" />
+				<path d="M-150,0 C-150,45 150,45 150,0" />
+				<path d="M-150,0 C-150,55 150,55 150,0" />
+				<path d="M-150,0 C-150,65 150,65 150,0" />
+			</g>
+			<g id="vert">
+				<path d="M0,-150 C-65,-150 -65,150 0,150" />
+				<path d="M0,-150 C-55,-150 -55,150 0,150" />
+				<path d="M0,-150 C-45,-150 -45,150 0,150" />
+				<path d="M0,-150 C-35,-150 -35,150 0,150" />
+				<path d="M0,-150 C-25,-150 -25,150 0,150" />
+				<path d="M0,-150 C-15,-150 -15,150 0,150" />
+				<path d="M0,-150 C-5,-150 -5,150 0,150" />
+				<path d="M0,-150 C5,-150 5,150 0,150" />
+				<path d="M0,-150 C15,-150 15,150 0,150" />
+				<path d="M0,-150 C25,-150 25,150 0,150" />
+				<path d="M0,-150 C35,-150 35,150 0,150" />
+				<path d="M0,-150 C45,-150 45,150 0,150" />
+				<path d="M0,-150 C55,-150 55,150 0,150" />
+				<path d="M0,-150 C65,-150 65,150 0,150" />
+			</g>
+		</symbol>
+	</svg>
+	<style> 
+		{% for i in range(length)%}
+		#dot{{i}} {
+			position:absolute;
+			box-sizing: content-box;
+			transform-origin:0 0;
+			top: 0px;
+			left: 0px;
+			width: 150%;
+			z-index: 2;   
 		}
-	}
-</script>
+		{%endfor%}
+
+		#newcontainer {
+			overflow: auto;   
+		}
+	</style>
+	<script>
+		function dotPositions(){
+			var map = document.getElementById("map");
+			var currentScreenX = map.offsetWidth - 100.0;
+			var currentScreenY = map.offsetHeight - 100.0;
+			var i;
+			var l = {{length}};
+			for(i = 0; i < l; i++){
+				var s = document.getElementById("dot" + i);
+				console.log(s);
+
+				var scale = currentScreenX/2000;
+
+
+				var screenXArr = {{screen_xs}};
+				var screenYArr = {{screen_ys}};
+				var preXArr = {{x_coord}};
+				var preYArr = {{y_coord}};
+				var screenX = screenXArr[i] - 100.0;
+				var screenY = screenYArr[i] - 100.0;
+
+				var prevScale = screenX/2000;
+
+				var preX = preXArr[i] - 50.0;
+				var preY = preYArr[i] - 50.0;
+
+				var x = ((currentScreenX*preX)/screenX) + 50.0;
+				var y = ((currentScreenY*preY)/screenY) + 50.0;
+
+				//var yScale = currentScreenX/1000;
+
+				//s.style.transform = 'scale('+scale+','+scale+')';
+				s.style.width = 30 + "px";
+				s.style.height = 30 + "px";
+				s.style.transform = 'translate('+x+'px,'+y+'px)';
+				//s.style.left = x + "px";
+				//s.style.top = y + "px";
+				console.log("dotPositions() ran!");
+			}
+		}
+	</script>
 </head>
 <body>
 	<div class="container-full">
@@ -1520,7 +1520,6 @@
 												<div class='t-face t-s5'>5</div>
 												<div class='t-face t-s6'>6</div>
 											</div>
-
 										</div>
 									</div>
 								</div>
@@ -1627,7 +1626,6 @@
 												<div class='t-face t-s5'>5</div>
 												<div class='t-face t-s6'>6</div>
 											</div>
-
 										</div>
 									</div>
 								</div>
