--- a/templates/building/fac.html
+++ b/templates/building/fac.html
@@ -142,7 +142,7 @@
 		<div id="map-container">
 			<!-- 147.64587/114.39804 = 1.290633 -->
 			<div id="newcontainer">
-				<img id="map" src="{{ url_for('static', filename='img/FAC.svg') }}" onload="dotPositions()">
+				<img id="map" src="{{ url_for('static', filename='img/FAC.svg') }}">
 				<div id='furniture-container'>
 					<div class='placement'>
 						<!-- <img src='blueprints/fac1_.svg' id='blueprint'> -->
@@ -1867,6 +1867,7 @@ function initPoint() {
 		pointInitialized = true;
 		point = new Point(meID,mapID);
 		console.log("Point initialized.");
+		dotPositions();
 		scrollToCenter();
 		setBgColor();
 	}
