--- a/templates/buildingclick/facclick.html
+++ b/templates/buildingclick/facclick.html
@@ -77,7 +77,7 @@
 			var currentScreenX = map.offsetWidth - 100.0;
 			var currentScreenY = map.offsetHeight - 100.0;
 			var i;
-			var l = {{length}};
+			var l = 1;
 			for(i = 0; i < l; i++){
 				var s = document.getElementById("dot" + i);
 				console.log(s);
