--- a/templates/buildingclick/templateclick.html
+++ b/templates/buildingclick/templateclick.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>{{building.replace('*','')}} Map</title>
 	<!-- Styles -->
 	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/furniture.css') }}" async>
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/fac_placement.css') }}" async>
 	<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
 	<svg style="height:0;">
 		<defs>
@@ -58,7 +60,7 @@
 				<path d="M0,-150 C55,-150 55,150 0,150" />
 				<path d="M0,-150 C65,-150 65,150 0,150" />
 			</g>
-		</symbol>
+	</symbol>
 	</svg>
 	<style>
 		#dot {
@@ -71,24 +73,25 @@
 </head>
 <body
 <div class="container-full">
-	<div class="row">
-		<div class="dropdown">
-			<button class="dropbtn">Buildings</button>
-			<div class="dropdown-content">
-				{%for item in buildings%}
-				<a href="{{url_for('index', building = item)}}">{{item.replace('*','')}}</a>
+    <div class="row">
+        <div class="dropdown">
+  			<button class="dropbtn">Buildings</button>
+  			<div class="dropdown-content">
+  				{%for item in buildings%}
+				    <a href="{{url_for('index', building = item)}}">{{item.replace('*','')}}</a>
 				{%endfor%}
-			</div>
+  			</div>
 		</div>
 		<button class="dropbtn" onclick="location.href='{{url_for('upload')}}'">Upload</button>
-	</div>
-	<!-- /row -->
+    </div>
+    <!-- /row -->
 </div>
 <header>
 	<span class="highlight-white line-bg">{{building.replace('*','')}}</span>
 </header>
 <main>
 	<div id="map-container">
+		<!-- 147.64587/114.39804 = 1.290633 -->
 		<img id="map" src="{{ url_for('static', filename='img/'+image) }}" width="150%">
 		<img id="dot" src="{{ url_for('static', filename='img/dot.svg') }}" width="30" height="30">
 	</div>
@@ -111,6 +114,43 @@
 
 <script>
 	function dotPositions(){
+		/*var map = document.getElementById("map");
+		var currentScreenX = map.offsetWidth - 100.0;
+		var currentScreenY = map.offsetHeight - 100.0;
+		var i;
+		var l = 1;
+		for(i = 0; i < l; i++){
+			var s = document.getElementById("dot" + i);
+			console.log(s);
+
+			var scale = currentScreenX/2000;
+
+
+			var screenXArr = {{screen_xs}};
+			var screenYArr = {{screen_ys}};
+			var preXArr = {{x_coord}};
+			var preYArr = {{y_coord}};
+			var screenX = screenXArr[i] - 100.0;
+			var screenY = screenYArr[i] - 100.0;
+
+			var prevScale = screenX/2000;
+
+			var preX = preXArr[i] - 50.0;
+			var preY = preYArr[i] - 50.0;
+
+			var x = ((currentScreenX*preX)/screenX) + 50.0;
+			var y = ((currentScreenY*preY)/screenY) + 50.0;
+
+			//var yScale = currentScreenX/1000;
+
+			//s.style.transform = 'scale('+scale+','+scale+')';
+			s.style.width = 30 + "px";
+			s.style.height = 30 + "px";
+			s.style.transform = 'translate('+x+'px,'+y+'px)';
+			//s.style.left = x + "px";
+			//s.style.top = y + "px";
+			console.log("dotPositions() ran!");
+		}*/
 		var map = document.getElementById("map");
 		var s = document.getElementById("dot");
 		var screenX = {{screen_x}} - 100.0;
