--- a/templates/building/template.html
+++ b/templates/building/template.html
@@ -359,8 +359,8 @@ class Point {
 			//var yScale = currentScreenX/1000;
 		
 			//s.style.transform = 'scale('+scale+','+scale+')';
-			s.style.width = scale*30 + "px";
-			s.style.height = scale*30 + "px";
+			s.style.width = 30 + "px";
+			s.style.height = 30 + "px";
 			s.style.transform = 'translate('+x+'px,'+y+'px)';
 			//s.style.left = x + "px";
 			//s.style.top = y + "px";
