--- a/templates/building/template.html
+++ b/templates/building/template.html
@@ -6,8 +6,6 @@
 	<title>{{building.replace('*','')}} Map</title>
 	<!-- Styles -->
 	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
-	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/furniture.css') }}" async>
-	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/fac_placement.css') }}" async>
 	<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
 	<svg style="height:0;">
 		<defs>
@@ -22,6 +20,63 @@
 				<use href="#vert_box"/>
 				<use href="#hor_box"/>
 			</clipPath>
+			<symbol id="ct" class="layer" fill="rgba(250,230,177,1)" viewbox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
+				<defs>
+					<!-- shadow filter -->
+					<filter id="f_shadow" x="-50%" y="-50%" width="200%" height="200%" primitiveUnits="objectBoundingBox">
+						<feColorMatrix
+							result="darken"
+							in="offOut"
+							type="matrix"
+							values="0.4 0 0 0 0
+											0 0.4 0 0 0
+											0 0 0.4 0 0
+											0 0 0 1 0" />
+						<!-- <feGaussianBlur result="blurOut" in="darken" stdDeviation=".05"/> -->
+					</filter>
+					<!--  darken filter -->
+					<filter id="f_darken" x="0" y="0" width="100%" height="100%">
+						<feColorMatrix
+							in="SourceGraphic"
+							type="matrix"
+							values="0.02 0 0 0 0
+											0 0.02 0 0 0
+											0 0 0.02 0 0
+											0 0 0 1 0" />
+					</filter>
+					<!-- 	bottom gradient	 -->
+					<radialGradient id="radial" cx="50%" cy="50%" r="50%" fx="0%" fy="50%" gradientTransform="translate(.5,0)">
+						<stop offset="0%" stop-color="rgba(255,255,255,.1)"/>
+						<stop offset="100%" stop-color="rgba(255,255,255,0)"/>
+					</radialGradient>
+					<!-- 	glare	 -->
+					<symbol id="glare" fill="rgba(255,255,255,.5)" viewbox="0 0 28 32" preserveAspectRatio="none">
+						<rect x="-1" y="-10" width="2" height="20" transform="translate(16,10) rotate(10) skewX(-30)"/>
+						<rect x="-.25" y="-10" width=".5" height="20" transform="translate(10,15) rotate(10) skewX(-30)"/>
+						<rect x="-2" y="-10" width="4" height="30" fill="rgba(255,255,255,.2)" transform="translate(18,13) rotate(10) skewX(-30)"/>
+					</symbol>
+					<!-- clip for glare -->
+					<clipPath id="glare_clip">
+						<ellipse id="glare_clip_def" cx="50" cy="0" rx="50" ry="50" transform="translate(0,6.7) scale(1,.5)"/>
+					</clipPath>
+				</defs>
+				<!-- 	shadow	 -->
+				<ellipse id="shadow" cx="50" cy="50" rx="50" ry="50" transform="translate(0,0) scale(.7,.7) scale(1,.5)" fill="rgba(38,34,22,.1)"/>
+				<!-- 	bottom	 -->
+				<ellipse id="bottom1" cx="50" cy="50" rx="50" ry="50" fill="rgb(38,34,22)" transform="translate(0,0) scale(.5,.5) scale(1,.5)"/>
+				<ellipse id="bottom2" cx="50" cy="50" rx="50" ry="50" fill="url(#radial)" transform="translate(0,0) scale(.5,.5) scale(1,.5)"/>
+				<!-- 	leg	 -->
+				<rect id="leg" width="15" height="50" rx="6" x="50" y="0" transform="translate(-7.5,6.7) scale(1,0.866)" fill="rgb(38,34,22)"/>
+				<!-- 	edge	 -->
+				<ellipse id="edge" cx="50" cy="0" rx="50" ry="50" transform="translate(0,6.7) matrix(1,0,0,1.02,0,.8485) scale(1,.5)" fill="rgba(0,0,0,1)"/>
+				<!-- 	top	 -->
+				<ellipse id="top" cx="50" cy="0" rx="50" ry="50" transform="translate(0,6.7) scale(1,.5)"/>
+				<!-- glare -->
+				<g clip-path="url(#glare_clip)">
+					<!-- "contain and clip" trick-->
+					<use id="glare_instance" xlink:href="#glare" width="100" height="50" y="-25" transform="translate(0,25) translate(0,-20.71) scale(1,1)"/>
+				</g>
+			</symbol>
 		</defs>
 		
 		<rect id="cb" width="100" height="100" rx="25" ry="25" mask="url(#border_mask)"/>
@@ -100,8 +155,7 @@
 	<div id="map-container">
 		<!-- 147.64587/114.39804 = 1.290633 -->
 		<div id="newcontainer">
-			<img id="map" src="{{ url_for('static', filename='img/'+image) }}">
-			<!-- INSERT FURNITURE HERE -->
+			<img id="map" src="{{ url_for('static', filename='img/'+image) }}" width="150%">
 			{% for i in range(length)%}
 				<img id="dot{{i}}" src="{{ url_for('static', filename='img/dot.svg') }}" width="30" height="30" />
 			{%endfor%}
@@ -124,6 +178,7 @@
 	<svg id="grid" viewbox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
 		<use href="#g" stroke="rgba(0,0,0,.1)" stroke-width=".25"/>
 	</svg>
+
 	
 	
 </main>
@@ -168,164 +223,8 @@
 </footer>
 
 <script>
-/*
-function dotPositions(){
-	var map = document.getElementById("map");
-	var currentScreenX = map.offsetWidth - 100.0;
-	var currentScreenY = map.offsetHeight - 100.0;
-	var i;
-	var l = {{length}};
-	for(i = 0; i < l; i++){
-		var s = document.getElementById("dot" + i);
-		console.log(s);
-		
-		var scale = currentScreenX/2000;
-		
-		
-		var screenXArr = {{screen_xs}};
-		var screenYArr = {{screen_ys}};
-		var preXArr = {{x_coord}};
-		var preYArr = {{y_coord}};
-		var screenX = screenXArr[i] - 100.0;
-		var screenY = screenYArr[i] - 100.0;
-		
-		var prevScale = screenX/2000;
-		
-		var preX = preXArr[i] - 50.0;
-		var preY = preYArr[i] - 50.0;
-	
-		var x = ((currentScreenX*preX)/screenX) + 50.0;
-		var y = ((currentScreenY*preY)/screenY) + 50.0;
-	
-		//var yScale = currentScreenX/1000;
-	
-		//s.style.transform = 'scale('+scale+','+scale+')';
-		s.style.width = 30 + "px";
-		s.style.height = 30 + "px";
-		s.style.transform = 'translate('+x+'px,'+y+'px)';
-		//s.style.left = x + "px";
-		//s.style.top = y + "px";
-		console.log("dotPositions() ran!");
-	}
-}
-
-function distance(x1,y1,x2,y2) {
-	return Math.sqrt((x1-x2)**2+(y1-y2)**2);
-}
-class Point {
-	constructor(meID,mapID) {
-		this.me = document.getElementById(meID);
-		let bounds = this.me.getBoundingClientRect();
-		this.diameter = bounds.width; // assume me never resizes.
-		this.map = document.getElementById(mapID);
-		this.updateOffset();
-		this.updateScroll();
-		this.paintScheduled = false;
-		this.updateScheduled = false; // assume can't resize and/or scroll and/or click at same time
-		this.registerHandlers();
-		this.pointSet = false;
-		// this.updates = 0;
-	}
-	updateCoords(X,Y) {
-		var flagx = 0;
-		var flagy = 0;
-		if (SoniasGlobalZoomVariable == 1.25){
-			flagy = 20;
-			flagx = 5;
-		}
-		if (SoniasGlobalZoomVariable == 1.5625){
-			flagy = 35;
-			flagx = 5;
-		}
-		if (SoniasGlobalZoomVariable == 1.953125){
-			flagy = 50;
-			flagx = 7;
-		}
-		if (SoniasGlobalZoomVariable == 2.44140625){
-			flagy = 10;
-			flagx = 5;
-		}
-		this.x = X/SoniasGlobalZoomVariable + this.scrollLeft - this.diameter/2 - this.offsetLeft + flagx;
-		this.y = Y/SoniasGlobalZoomVariable + this.scrollTop - this.diameter/2 - this.offsetTop + flagy;
-		// console.log("updated x,y: " + this.x + ", " + this.y);
-	}
-	updateScroll() {
-		this.scrollLeft = this.map.scrollLeft;
-		this.scrollTop = this.map.scrollTop;
-		this.updateScheduled = false;
-		// this.updates++;
-		// console.log([this.scrollLeft,this.scrollTop]);
-	}
-	updateOffset() {
-		let bounds = this.map.getBoundingClientRect();
-		this.offsetLeft = bounds.left;
-		this.offsetTop = bounds.top;
-		this.x *= SoniasGlobalZoomVariable;
-		this.y *= SoniasGlobalZoomVariable;
-		this.updateScheduled = false;
-		// console.log([this.offsetLeft, this.offsetTop]);
-	}
-	repaint() {
-		this.me.style.transform = 'translate('+this.x+'px,'+this.y+'px)';
-		this.paintScheduled = false;
-		// console.log(this.me.style.transform);
-	}
-	clickHandler(e) {
-		// (1) Uncomment for "unset when click close", "reset when click far away" behavior
-		//let x = this.x,
-		//y = this.y;
-		//this.updateCoords(e.clientX,e.clientY);
-		//if (distance(x,y,this.x,this.y) < 2*this.diameter)
-		//	this.pointSet = !this.pointSet;
-		//else
-		//	this.repaint();
-		
-		
-		// (2) Uncomment for simple "toggle set" behavior
-		this.pointSet = !this.pointSet;	
-		
-		var map = document.getElementById("map");
-		var currentScreenX = map.offsetWidth - 100.0;
-		var scale = currentScreenX/2000;
-		
-		document.getElementById('top_label').value = this.y;
-		document.getElementById('left_label').value = this.x;
-		
-		document.getElementById('sc_width_label').value = map.offsetWidth;
-		document.getElementById('sc_height_label').value = map.offsetHeight;
-		
-		document.getElementById('zoom_label').value = 150;
-		// TODO: More intuitive behaviors... like "press and hold to set", "click to release"
-	}
-	mouseMoveHandler(e) {
-		// Perhaps this is not really a good behavior for mobile since there is no "hover" input
-		if (this.pointSet)
-			return;
-		this.updateCoords(e.clientX,e.clientY);
-		if (this.paintScheduled)
-			return;
-		this.paintScheduled = true;
-		requestAnimationFrame(() => this.repaint());
-	}
-	scrollHandler(e) {
-		if (this.updateScheduled)
-			return;
-		this.updateScheduled = true;
-		requestAnimationFrame(() => this.updateScroll());
-	}
-	resizeHandler(e) {
-		if (this.updateScheduled)
-			return;
-		this.updateScheduled = true;
-		requestAnimationFrame(() => this.updateOffset());
-	}
-	registerHandlers() {
-		this.map.addEventListener('click',(e) => this.clickHandler(e));
-		this.map.addEventListener('mousemove',(e) => this.mouseMoveHandler(e));
-		this.map.addEventListener('scroll',(e) => this.scrollHandler(e));
-		this.map.addEventListener('resize',(e) => this.resizeHandler(e));
-	}
-}*/
+	var dot_flag = false;
+						
 	function dotPositions(){
 		var map = document.getElementById("map");
 		var currentScreenX = map.offsetWidth - 100.0;
@@ -357,8 +256,8 @@ class Point {
 			//var yScale = currentScreenX/1000;
 		
 			//s.style.transform = 'scale('+scale+','+scale+')';
-			s.style.width = 30 + "px";
-			s.style.height = 30 + "px";
+			s.style.width = scale*30 + "px";
+			s.style.height = scale*30 + "px";
 			s.style.transform = 'translate('+x+'px,'+y+'px)';
 			//s.style.left = x + "px";
 			//s.style.top = y + "px";
@@ -366,7 +265,13 @@ class Point {
 			dot_flag = true;
 		}
 	}
-	
+						
+	window.onload = dotPositions;
+	if (!dot_flag)
+		dotPositions();
+</script>
+<script>
+
 function distance(x1,y1,x2,y2) {
 	return Math.sqrt((x1-x2)**2+(y1-y2)**2);
 }
@@ -485,32 +390,14 @@ class Point {
 	}
 }
 
-function scrollToCenter() {
-	var c = document.getElementById('newcontainer');
-	c.scrollTop = c.scrollHeight * 6.648/(114.400 - 1) + 50;
-	c.scrollLeft = c.scrollWidth * 23.129/(147.644 - 1) + 30;
-}
-
-function setBgColor(time=(new Date()).getHours()) {
-	var c = document.getElementById('newcontainer');
-	if (time > 17)
-		c.style.background = 'linear-gradient(rgba(0,0,255,.5) 0%, rgba(255,0,0,.25) 100%)';
-	else if (time > 11)
-		c.style.background = 'linear-gradient(rgba(128,255,255,.5) 0%, rgba(128,128,0,.25) 100%)';
-	else if (time > 6)
-		c.style.background = 'linear-gradient(rgba(255,255,0,.25) 0%, rgba(0,128,233,.5) 100%)';
-	else if (time > 3)
-		c.style.background = 'linear-gradient(rgba(0,0,255,.5) 0%, rgba(0,0,0,.25) 100%)';
-	else
-		c.style.background = 'linear-gradient(rgba(0,0,0,.5) 0%, rgba(0,0,255,.25) 100%)';
-}
-
 var SoniasGlobalZoomVariable = 1;
+
+
 const	meID = 'pin',
 		mapID = 'newcontainer';
 var		point,
 		pointInitialized = false;
-/*
+
 function initPoint() {
 	if (pointInitialized)
 		return;
@@ -518,36 +405,22 @@ function initPoint() {
 		pointInitialized = true;
 		point = new Point(meID,mapID);
 		console.log("Point initialized.");
-		dotPositions();
-		scrollToCenter();
-		setBgColor();
 	}
 	else
 		document.addEventListener('readystatechange',initPoint);
 }
+
 initPoint();
-*/
-function initPoint() {
-	if (pointInitialized)
-		return;
-	if (document.readyState === 'interactive' || document.readyState === 'complete') {
-		pointInitialized = true;
-		point = new Point(meID,mapID);
-		dotPositions();
-		scrollToCenter();
-		setBgColor();
-	}
-	else
-		document.addEventListener('readystatechange',initPoint);
-}
-initPoint();
+
 </script>
 <!--
 <script src="https://hammerjs.github.io/dist/hammer.js"></script>
 <script>
 	  //var globalMap = document.getElementById("map");
+
 	  var currentMapX = 0;
 	  var currentMapY = 0;
+
       var MIN_SCALE = 1; // 1=scaling when first loaded
       var MAX_SCALE = 64;
       // HammerJS fires "pinch" and "pan" events that are cumulative in nature and not
@@ -619,7 +492,9 @@ initPoint();
         if(originalZoom >1){
         newZoom = current.zoom / 1.25; //put parameter for scale
 		
+
 		}
+
 		SoniasGlobalZoomVariable=newZoom;
 		
         current.zoom = newZoom;
@@ -693,6 +568,7 @@ initPoint();
 			var s = document.getElementById("dot" + i);
 			s.style.transform = 'scale('+current.zoom+')';
 		}*/
+
 		var p = document.getElementById("newcontainer");
 		p.style.transform = 'scale('+current.zoom+')';
 		p.style.transformOrigin = "0 0"; 
@@ -705,5 +581,6 @@ initPoint();
       onLoad();
 </script>
 -->
+
 </body>
 </html>
