--- a/templates/building/template.html
+++ b/templates/building/template.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>{{building.replace('*','')}} Map</title>
 	<!-- Styles -->
-	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/demostyles.css') }}" async>
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" async>
 	<link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet" async>
 	<svg style="height:0;">
 		<defs>
