--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -89,7 +89,7 @@ footer {}
 
 	/* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #7b5eff;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -131,5 +131,5 @@ footer {}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #7b5eff;
 }
