--- a/templates/building/template.html
+++ b/templates/building/template.html
@@ -183,7 +183,7 @@
 	
 </main>
 <footer>
-	<!--<button type= "button" class = "btn btn-default btn-xs" onclick = "zoomOut()" style="float: right;"> Zoom Out</button>-->
+	<button type= "button" class = "btn btn-default btn-xs" onclick = "zoomOut()" style="float: right;"> Zoom Out</button>
 	<span class="info">How it works</span>
 	<hr>
 	<ul>
@@ -428,7 +428,7 @@ function initPoint() {
 initPoint();
 
 </script>
-<!--
+
 <script src="https://hammerjs.github.io/dist/hammer.js"></script>
 <script>
 	  //var globalMap = document.getElementById("map");
@@ -595,7 +595,7 @@ initPoint();
       };
       onLoad();
 </script>
--->
+
 
 </body>
 </html>
